-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.3
-
Component/s: None
-
Labels:
-
Environment:
VirtualBox 4.3.20 with ac97 driver and guest additions
-
Guilty Revision:66,168
VLC 2.1.0 causes BSOD. It can be triggered by making mouse interaction with the VLC window while video is playing.
Log continuously shows (../../win32ss/user/ntuser/msgqueue.c:1937) err: MsqPeekHardwareMessage: Thread Q is locked to another pti!
VLC configuration : Video -> GDI output, Audio -> Automatic
VLC used to run well. I am yet to find the guily revision for the regression.
[UPDATE] Starts failing after changeset 66168
- is duplicated by
-
CORE-9436 Assertion failure 'entry->flags & HANDLEENTRY_INDESTROY' when using Magnifier
-
- Resolved
-
- relates to
-
CORE-10471 [WIN32SS|INPUT]BSOD on random user hid mouse
-
- Resolved
-
-
CORE-9836 PATCH [WIN32SS] BSOD during shutdown after assertion 'entry->flags & HANDLEENTRY_INDESTROY'
-
- Resolved
-